<resources>
    <string name="app_name">TemperatureConverter</string>
    <string name="temperature_input">Input Temperature</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select">Select</string>
    <string name="btnConvert">Convert</string>
    <string name="result">Result :</string>
    <string name="resultConverter">99</string>
    <string name="btnReset">Reset</string>
    <string name="perhitungan_suhu"> -\tRumus dari skala Celcius ke skala Fahrenheit => T (derajat C) = 9/5 T derajat Celcius + 32.\n
-\tRumus dari skala Celcius ke Kelvin => T (K) = T derajat C + 273.\n
-\tRumus dari skala Fahrenheit ke skala Celcius => T (derajat C) = 5/9 T derajat F – 32.\n
-\tRumus dari skala Fahrenheit ke Kelvin => T (K) = 5/9 ( T derajat F – 32) + 273.\n
-\tRumus dari skala Kelvin ke skala Celcius => T (derajat C) = TK – 273.\n
-\tRumus dari skala Kelvin ke skala Fahrenheit => T (derajat F) = 9/5 (TK-273) + 32.\n
    </string>
    <string name="btnRumus">Rumus</string>
    <string name="copyright">Aplikasi Temperature Converter adalah aplikasi berbasis android yang dibuat menggunakan bahasa kotlin. Aplikasi ini berfungsi untuk mengkonversi suhu dari masukan pengguna dan pengguna dapat memilih berbagai jenis suhu seperti Celcius(C), Fahrenheit(F) , dan Kelvin (K). Setelah pengguna memasukkan angka, pengguna dapat memilih jenis suhu yang diinginkan dan memilih untuk dikonversi ke suhu yang diinginkan oleh pengguna. Kemudian pengguna dapat mengeklik tombol yang telah disediakan untuk melihat hasil konversi tersebut.\n\nAplikasi ini dibuat
        untuk Assesment Mobpro 1.
        \n\nCopyright © 2023 imamsaktii.\nAll rights reserved.
        </string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="btnShare">Bagikan</string>
    <string name="bagikan_template">Suhu Masukan: %1$s \nSuhu Awal: %2$s
\nSuhu Akhir: %3$s\nHasil: %4$s</string>
    <string name="data_kosong">Tidak ada data</string>
    <string name="histori">Histori</string>

    <string name="hasil_x">Hasil Suhu: %1$.2f</string>
    <string name="data_x">Input Suhu: %1$.2f - Suhu awal: %2$s - \nSuhu akhir: %3$s</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="penemuSuhu">Penemu Suhu</string>
    <string name="koneksi_error">Koneksi Error</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>

    <string name="notif_title">Mari cek suhu!</string>
    <string name="notif_text">Hitung suhu sekarang yuu..</string>


    <string-array name="temperature_units">
        <item>Kelvin</item>
        <item>Celcius</item>
        <item>Fahrenheit</item>
    </string-array>
</resources>